# OTUS_CPP_DEVELOPER

./: Lessons.sln  README.md
HomeWork/: Project_2_Hello_World.sln
HomeWork/Project_2_Hello_World/: Project_2_Hello_World.vcxproj
Lesson_2/: CMakeLists.txt  Lesson_2.sln  Lesson_2.vcxproj  Source.cpp
Lesson_3/: CMakeLists.txt  Lesson_3.vcxproj  Lesson_3.vcxproj.filters  Source.cpp  Source1.cpp  Source10.cpp  Source2.cpp  Source3.cpp  Source4.cpp  Source5.cpp  Source6.cpp  Source7.cpp  Source8.cpp  Source9.cpp  ex_file.txt
Lesson_4/: CMakeLists.txt  Lesson_4.vcxproj  Source.cpp
Lesson_5/: Lesson_5.vcxproj  Source.cpp
Lesson_6/: CMakeLists.txt  Lesson_6.vcxproj
Lesson_6/example0_gnu_make/: Makefile
Lesson_6/example1/: CMakeLists.txt
